--- a/LanServer/LanServer.vcxproj
+++ b/LanServer/LanServer.vcxproj
@@ -79,13 +79,16 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="LanServer.h" />
+    <ClInclude Include="LanServer_test.h" />
     <ClInclude Include="NPacket.h" />
     <ClInclude Include="StreamQueue.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="CLanServer.cpp" />
+    <ClCompile Include="LanServer.cpp" />
+    <ClCompile Include="LanServer_test.cpp" />
     <ClCompile Include="NPacket.cpp" />
     <ClCompile Include="StreamQueue.cpp" />
+    <ClCompile Include="test.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
